; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c__mod_unbind.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_srv.c__mod_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_model = type { i32 }
%struct.bt_mesh_elem = type { i32 }
%struct.unbind_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bt_mesh_model*, %struct.bt_mesh_elem*, i32, i32, i8*)* @_mod_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_mod_unbind(%struct.bt_mesh_model* %0, %struct.bt_mesh_elem* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.bt_mesh_model*, align 8
  %7 = alloca %struct.bt_mesh_elem*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.unbind_data*, align 8
  store %struct.bt_mesh_model* %0, %struct.bt_mesh_model** %6, align 8
  store %struct.bt_mesh_elem* %1, %struct.bt_mesh_elem** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %10, align 8
  %13 = bitcast i8* %12 to %struct.unbind_data*
  store %struct.unbind_data* %13, %struct.unbind_data** %11, align 8
  %14 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %6, align 8
  %15 = load %struct.unbind_data*, %struct.unbind_data** %11, align 8
  %16 = getelementptr inbounds %struct.unbind_data, %struct.unbind_data* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.unbind_data*, %struct.unbind_data** %11, align 8
  %19 = getelementptr inbounds %struct.unbind_data, %struct.unbind_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @mod_unbind(%struct.bt_mesh_model* %14, i32 %17, i32 %20)
  ret void
}

declare dso_local i32 @mod_unbind(%struct.bt_mesh_model*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
